--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -34,6 +34,6 @@
     </h3>
     <p>{{ .Plain | truncate 150 }}</p>
 
-    <a href="{{.Permalink}}" class="btn btn-sm btn-primary rounded">Read More</a>
+    <a href="{{.Permalink}}" class="btn btn-sm btn-outline-primary rounded" aria-label="Read Post Details">Read More</a>
   </div>
 </article>
