--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -4,22 +4,22 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-8">
-        <form action="{{site.Params.contact_form_action}}">
+        <form action="{{site.Params.contact_form_action}}" method="POST">
           <div class="mb-4">
             <label for="name" class="form-label">Your Name</label>
-            <input type="email" class="form-control rounded" id="name" placeholder="Alex Smith" required>
+            <input type="text" name="name" class="form-control rounded" id="name" placeholder="Alex Smith" required>
           </div>
           <div class="mb-4">
             <label for="email" class="form-label">Email Address</label>
-            <input type="email" class="form-control rounded" id="email" placeholder="hello@bookworm.com" required>
+            <input type="email" name="email" class="form-control rounded" id="email" placeholder="hello@bookworm.com" required>
           </div>
           <div class="mb-4">
             <label for="subject" class="form-label">Subject</label>
-            <input type="email" class="form-control rounded" id="subject" placeholder="Reasons for Contact" required>
+            <input type="text" name="email" class="form-control rounded" id="subject" placeholder="Reasons for Contact" required>
           </div>
           <div class="mb-4">
             <label for="message" class="form-label">Your Message Here</label>
-            <textarea class="form-control rounded" id="message" rows="4" placeholder="Your Message" required></textarea>
+            <textarea class="form-control rounded" name="message" id="message" rows="4" placeholder="Your Message" required></textarea>
           </div>
 
           <button type="submit" class="btn btn-primary rounded" aria-label="Send Message">Send Message</button>
