--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -15,7 +15,7 @@
           </div>
           <div class="mb-4">
             <label for="subject" class="form-label">Subject</label>
-            <input type="text" name="email" class="form-control rounded" id="subject" placeholder="Reasons for Contact" required>
+            <input type="text" name="subject" class="form-control rounded" id="subject" placeholder="Reasons for Contact" required>
           </div>
           <div class="mb-4">
             <label for="message" class="form-label">Your Message Here</label>
