--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -3,7 +3,7 @@
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-12 mb-5">
+      <div class="col-lg-10 mx-auto mb-5">
         <div class="title-bordered">
           <h1 class="h3">Search results for
             <span class="mark">
@@ -16,22 +16,20 @@
           </h1>
         </div>
       </div>
-      <div class="col-12">
+      <div class="col-lg-10 mx-auto">
         <div class="row" id="search-results"></div>
-        <div class="row">
-          <script id="search-result-template" type="text/x-js-template">
-            <div class="col-lg-4 col-md-6 mb-4">
-            <article class="card post-card" id="summary-${key}">
-              ${ isset image }<img loading="lazy" class="w-100" src="{{site.BaseURL}}${image}" alt="${title}">${end}
-              <div class="card-body">
-                <h3 class="h4 mb-4">
-                  <a class="post-title" href="${link}">${title}</a>
-                </h3>
-              </div>
-            </article>
+        <script id="search-result-template" type="text/x-js-template">
+          <article class="row align-items-center mb-4" id="id-${key}">
+            <div class="col-md-5 mb-4">${image}</div>
+            <div class="col-md-7 mb-4">
+              <span class="d-inline-block mb-3">${date}</span>
+              <h3 class="h4 mb-3">
+                <a class="post-title" href="${link}">${title}</a>
+              </h3>
+              <p class="mb-0">${snippet}</p>
             </div>
-          </script>
-        </div>
+          </article>
+        </script>
       </div>
     </div>
   </div>
