--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,7 +14,7 @@
               <a href="#!" class="card-meta-author">
                 {{ with .Site.GetPage (.Params.author | urlize | lower) }}
                 <a href="{{.Permalink}}" class="card-meta-author">
-                  <img loading="lazy" src="{{.Params.image | absURL}}" alt="{{ .Title }}">
+                  {{ partial "image.html" (dict "Src" .Params.image "Size" "26x26" "Class" "w-auto" "Alt" .Title) }}
                   <span>{{.Title}}</span>
                 </a>
                 {{ end }}
@@ -29,7 +29,7 @@
 
         {{ with .Params.image }}
         <div class="mb-5 text-center">
-          <img loading="lazy" class="img-fluid rounded" src="{{ . | absURL}}" alt="Image not Found">
+          {{ partial "image.html" (dict "Src" . "Class" "img-fluid rounded" "Alt" "Post image") }}
         </div>
         {{ end }}
 
@@ -60,7 +60,9 @@
         <div class="col-lg-10">
           <div class="media d-block d-sm-flex text-center text-sm-left">
             {{ with .Site.GetPage (.Params.Author | urlize | lower) }}
-            <a href="{{.Permalink}}"><img loading="lazy" class="img-fluid rounded-circle mr-0 mr-sm-4 mb-4" src="{{.Params.image | absURL}}" alt="{{ .Title }}"></a>
+            <a href="{{.Permalink}}">
+              {{ partial "image.html" (dict "Src" .Params.image "Size" "150x150" "Class" "img-fluid rounded-circle mr-0 mr-sm-4 mb-4" "Alt" .Title) }}
+            </a>
             <div class="media-body">
               <p class="font-primary mb-1">Written By</p>
               <h4><a href="{{.Permalink}}" class="text-dark font-weight-700">{{.Title}}</a></h4>
