--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,8 +8,8 @@
   {{ "<!-- mobile responsive meta -->" | safeHTML}}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 
-  {{ "<!-- Favicon -->" | safeHTML}}
-  <link rel="icon" href="{{ site.Params.favicon | absURL }}" type="image/x-icon">
+  <!-- favicon -->
+  {{ partialCached "favicon" . }}
 
   {{ "<!-- CSS Plugins -->" | safeHTML}}
   {{ partialCached "style.html" . }}
