--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,10 +4,8 @@
     <div class="row">
       <div class="col-12">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
-          <a class="navbar-brand font-weight-bold mr-0" href="{{site.BaseURL}}">
-            {{if site.Params.logo}}
-            <img loading="lazy" src="{{site.Params.logo | absURL}}" alt="{{site.Title}}" height="{{site.Params.logo_height}}">
-            {{else}} {{site.Title}} {{end}}
+          <a class="navbar-brand font-weight-bold mr-0" href="{{site.BaseURL}}">            
+            {{ partial "logo.html" . }}
           </a>
 
           {{if site.Params.search}}
