--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -6,7 +6,7 @@
       <div class="col-8">
         <form action="{{site.Params.contact_form_action}}" method="post">
           <div class="mb-4">
-            <label for="name" class="form-label">Full Nmae</label>
+            <label for="name" class="form-label">Full Name</label>
             <input type="text" class="form-control" id="name" name="name" required>
           </div>
           <div class="mb-4">
