--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,9 @@
 
   {{ "<!-- mobile responsive meta -->" | safeHTML}}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+  
+  <!-- theme meta -->
+  <meta name="theme-name" content="bookworm-light" />
 
   <!-- favicon -->
   {{ partialCached "favicon" . }}
