--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="section-sm fixed-bottom">
+<footer class="section-sm">
   <div class="container">
     <div class="row justify-content-center align-items-center">
       <div class="col-lg-5">
