--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,9 +17,9 @@
   {{ "<!-- CSS Plugins -->" | safeHTML}}
   {{ partialCached "style.html" . }}
   <!-- google analytics -->
-  {{ if hasPrefix .Site.GoogleAnalytics "G-" -}}
+  <!-- {{ if hasPrefix .Site.GoogleAnalytics "G-" -}}
     {{ template "_internal/google_analytics.html" . -}}
   {{ else -}}
     {{ template "_internal/google_analytics_async.html" . -}}
-  {{ end -}}
+  {{ end -}} -->
 </head>
