--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -46,7 +46,8 @@
           </p>
         </div>
         <script>
-          const apiBaseUrl = 'https://danielkuan.com/v1'
+          const apiBaseUrl = 'https://danielkuan.com'
+          const apiVersion = 'v1'
           
           console.log('Current origin:', window.location.origin);
           console.log('API Base URL:', apiBaseUrl);
@@ -55,7 +56,7 @@
           if (!sessionStorage.getItem('aboutPageVisited')) {
             sessionStorage.setItem('aboutPageVisited', 'true');
             
-            fetch(`${apiBaseUrl}/add_visitor`, {
+            fetch(`${apiBaseUrl}/${apiVersion}/add_visitor`, {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json'
@@ -76,7 +77,7 @@
             });
           }
 
-          fetch(`${apiBaseUrl}/get_visitor_count`, {
+          fetch(`${apiBaseUrl}/${apiVersion}/get_visitor_count`, {
             method: 'GET',
           })
           .then(response => {
