--- a/layouts/partials/essentials/head.html
+++ b/layouts/partials/essentials/head.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 
 <!-- theme meta -->
-<meta name="theme-name" content="bookworm-light-hugo" />
+<meta name="theme-name" content="bookworm-light" />
 
 <!-- favicon -->
 {{ partialCached "favicon" . }}
