Add target blank and other small customizations

--- a/layouts/partials/essentials/footer.html
+++ b/layouts/partials/essentials/footer.html
@@ -29,7 +29,7 @@
         </ul>
         <ul class="social-links icon-box list-unstyled list-inline font-weight-500 mb-3">
           {{range site.Params.social}}
-          <li class="list-inline-item text-center"><a href="{{.url}}" aria-label="social-icon">
+          <li class="list-inline-item text-center"><a href="{{.url}}" target="_blank" aria-label="social-icon">
             <i class="lab {{.icon}}"></i>
           </a></li>
           {{end}}
