--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -71,13 +71,17 @@
                 <p class="font-primary mb-1">Written By</p>
                 <h4><a href="{{.Permalink}}" class="text-dark font-weight-700">{{.Title}}</a></h4>
                 <p class="font-primary">{{ .Summary | truncate 250 }}</p>
+                {{ if .Params.social.enable }}
+                {{ with .Params.social }}
                 <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2">
-                  {{ range .Params.social }}
+                  {{ range .social_links }}
                   <li class="list-inline-item"><a href="{{.link | safeURL}}">
                       <i class="lab {{.icon}}"></i>
                     </a></li>
                   {{end}}
                 </ul>
+                {{end}}
+                {{end}}
               </div>
               {{ end }}
             </div>
